# actualbudget-currency

./: Dockerfile  accounts.yaml.example  main.py  pyproject.toml
.github/workflows/: docker.yml
src/: config.py  gocardless.py  nbp.py  sync.py
